CREATE TABLE fridges (
  id BIGINT AUTO_INCREMENT NOT NULL PRIMARY KEY,
  name VARCHAR(100) NOT NULL,
  created_by BIGINT,
  FOREIGN KEY (created_by) REFERENCES users(id),
  updated_by BIGINT,
  FOREIGN KEY (updated_by) REFERENCES users(id),
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
)
