CREATE TABLE ingredients (
  id BIGINT AUTO_INCREMENT NOT NULL PRIMARY KEY,
  fridge_id BIGINT NOT NULL,
  FOREIGN KEY (fridge_id) REFERENCES fridges(id) ON DELETE CASCADE,
  quantity DECIMAL(10, 2) NOT NULL,
  unit VARCHAR(20) NOT NULL,
  expiration_date DATE,
  created_by BIGINT NOT NULL,
  FOREIGN KEY (created_by) REFERENCES users(id),
  updated_by BIGINT NOT NULL,
  FOREIGN KEY (updated_by) REFERENCES users(id),
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
)
