@startuml share-fridge

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  auth_provider : ENUM('google','guest')
  sub : VARCHAR(255)
  email : VARCHAR(255)
  display_name : VARCHAR(100)
  is_deleted : BOOLEAN
  deleted_at : DATETIME
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "fridges" as fridges {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR(100)
  created_by : BIGINT <<FK>>
  updated_by : BIGINT <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "fridge_users" as fridge_users {
  * fridge_id : BIGINT <<PK,FK>>
  * user_id   : BIGINT <<PK,FK>>
  --
  created_at : TIMESTAMP
}

entity "ingredients" as ingredients {
  * id : BIGINT <<PK>>
  --
  fridge_id : BIGINT <<FK>>
  quantity : DECIMAL(10,2)
  unit : VARCHAR(20)
  expiration_date : DATE
  created_by : BIGINT <<FK>>
  updated_by : BIGINT <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

' リレーション
users ||--o{ fridges : "created_by / updated_by"
users ||--o{ fridge_users : ""
fridges ||--o{ fridge_users : "ON DELETE CASCADE"
fridges ||--o{ ingredients : "ON DELETE CASCADE"
users ||--o{ ingredients : "created_by / updated_by"

@enduml
